--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+header{
+    position: fixed;
+    top: 0px;
+    padding-top: 10px;
+    background-color: #202122;
+    width: 100%;
+}
+
 .header-parent{
     display: flex;
     align-items: center;
@@ -28,6 +36,7 @@
 }
 
 body{
+    margin-top: 95px;
     background-color: #202122;
     color: #FFFFFF;
     
