--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ header{
     padding-top: 10px;
     background-color: #202122;
     width: 100%;
+
+    z-index: 999;
 }
 
 .header-parent{
@@ -84,4 +86,43 @@ body{
 .nav-button:hover{
     text-decoration: none;
     color: #ff8b8b;
+}
+
+.show-side-bar-button{
+    display: none;
+}
+
+.hide-side-bar-button{
+    display: none;
+}
+
+.side-bar-navigation-list{
+    position: fixed;
+    display: none;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 998;
+    font-size: 50px;
+
+    list-style: none;
+
+    padding-top: 40px;
+    background-color: #202122;
+}
+
+.navigation-item-side{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media only screen and (max-width: 992px) {
+    .show-side-bar-button{
+        display: flex;
+    }
+
+    .navigation-item{
+        display: none;
+    }
 }
