--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ header{
 
 .Title{
     text-transform: uppercase;
+    font-size: 35px;
 }
 
 .header-child-text{
@@ -51,6 +52,11 @@ body{
     color: #000000;
     
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.link{
+    color: #555555;
+    text-decoration: none;
 }
 
 p{
