--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,16 @@ header{
 
 #main-footer{
     text-align: center;
+    padding: 10px;
 }
 
 body{
+    margin: auto;
     margin-top: 95px;
     background-color: #ffffff;
     color: #000000;
+
+    max-width: 1300px;
     
     font-family: Arial, Helvetica, sans-serif;
 }
